replace code with functions

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Title</title>
-        <script src="script.js"></script>
     </head>
     <body>
-
+        <h1 id="scoreDisplay">Score: </h1>
+        <h1 id="computerChoiceDisplay">computer's choice: </h1>
+        <h1 id="playerChoiceDisplay">player's choice: </h1>
+        <script src="script.js"></script>
     </body>
 </html>
