--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         <h1 id="scoreDisplay">Score: </h1>
         <h1 id="computerChoiceDisplay">computer's choice: </h1>
         <h1 id="playerChoiceDisplay">player's choice: </h1>
+        <h1 id="winner"></h1>
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
         <script src="script.js"></script>
     </body>
 </html>
