display last round's result

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1 id="scoreDisplay">Score: </h1>
+        <h1 id="roundResultDisplay">Last round: </h1>
         <h1 id="computersChoiceDisplay">Computer's choice: </h1>
         <h1 id="playersChoiceDisplay">Player's choice: </h1>
         <h1 id="winner"></h1>
